--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a img{text-decoration: none;margin: 0px;padding: 0px;border:none;}
     height: 1px;
     line-height: 10px;
     text-align: left;
-    background-color: #FFFFFF;
+    background-color: rgba(255,255,255,0.00);
     font-size: 50px;
     font-family: allan;
     font-style: italic;
@@ -374,10 +374,10 @@ ul, ol { padding: 0;}
     margin-top: auto;
     margin-right: auto;
     margin-bottom: auto;
-    padding-left: 323px;
+    padding-left: 198px;
     -webkit-box-shadow: 0px 0px 72px 7px #000000;
     box-shadow: 0px 0px 72px 7px #000000;
-    padding-top: 100px;
+    padding-top: 73px;
     padding-right: 25px;
 }
 .more .project-list .project {
@@ -438,3 +438,27 @@ ul, ol { padding: 0;}
 		.select {
 			margin-top: 10px;
 		}
+	.demo{background: #d57d7d;padding: 1.5em 0;}
+	a:hover,a:focus{outline: none;text-decoration: none;}
+	.tab .nav-tabs{position: relative;border-bottom: 0 none;}
+	.tab .nav-tabs li{text-align: center;}
+	.tab .nav-tabs li a{display: block;height: 70px;line-height: 65px;background: linear-gradient(165deg, transparent 29%, #908a78 30%);font-size: 15px;font-weight: 600;color: #fff;text-transform: uppercase;margin-right: 0;border-radius: 0;border: none;position: relative;transition: all 0.5s ease 0s;}
+	.tab .nav-tabs li.active a,.tab .nav-tabs li a:hover{background: linear-gradient(165deg, transparent 29%, #efe8d5 30%);border: none;color: #908a78;}
+	.tab .nav-tabs li a:before{content: "";height: 70px;line-height: 90px;border-bottom: 70px solid rgba(0, 0, 0, 0.1);border-right: 10px solid transparent;position: absolute;top: 0;left: 100%;z-index: 1;}
+	.tab .nav-tabs li:last-child a:before{border: none;}
+	.tab .tab-content{font-size: 14px;color: #6f6c6c;line-height: 26px;background: #efe8d5;padding: 20px;}
+	.tab .tab-content h3{font-size: 24px;color: #6f6c6c;margin-top: 0;}
+	.tab .tab-content p{margin-bottom: 0;}
+#moretext {
+    font-size: 50px;
+    letter-spacing: 20px;
+    text-shadow: 0px 7px 28px rgba(174,86,87,1.00);
+    font-weight: bold;
+}
+
+	@media only screen and (max-width: 480px){
+		.tab .nav-tabs li{width: 33%;margin-bottom: 8px;}
+		.tab .nav-tabs li:last-child{margin-bottom: 0;}
+		.tab .nav-tabs li a:before{border: none;}
+		.tab .nav-tabs li a{font-size: 0.8em;}
+	}
